security: 全栈深度审计修复 - 19 项 P0/P1 问题
## P0 安全修复 (9项)
- JWT 密钥字节长度验证
- CORS 配置从环境变量读取
- H2 Console 默认禁用
- IP 识别欺骗防护 (X-Forwarded-For 从右向左解析)
- 文件上传 MIME 类型验证 (前后端)
- Token 存储统一 (移除冗余 key)
- API 响应验证
- XSS 防护审查

## P1 重要优化 (10项)
- 密码强度验证增强 (8+ 字符 + 复杂度)
- SQL LIKE 通配符转义
- Search Worker 错误处理
- Token 刷新边界条件
- offlineQueue 不可重试错误判断
- 文档性能指标统一

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>